fix: view models bug to make external testing
